set(CMAKE_EXECUTABLE_SUFFIX ".html")
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-s DISABLE_EXCEPTION_CATCHING=0)
add_compile_options(-fexceptions)
add_link_options(-s DISABLE_EXCEPTION_CATCHING=0)
add_link_options(-fexceptions)
include_directories(../../src/include/)
add_executable(main-wasm main.cpp)
target_link_libraries(main-wasm kuzu)
